--- a/explore.qmd
+++ b/explore.qmd
@@ -4,12 +4,12 @@ title: "Unidad 2: Exploración de Información Espacial"
 
 # Visualizando vectores
 
-- Visualización de capas de vectores
-  + Cargando datos en capas vectoriales
-  + Explorando atributos y valores
-  + Selección de entidades: Consultas y motor de búsqueda
-  + Estilos y etiquetas de capas vectoriales.
-  + Ejercicios prácticos
+-   Visualización de capas de vectores
+    -   Cargando datos en capas vectoriales
+    -   Explorando atributos y valores
+    -   Selección de entidades: Consultas y motor de búsqueda
+    -   Estilos y etiquetas de capas vectoriales.
+    -   Ejercicios prácticos
 
 ## Paquetes utilizados en esta lección
 
@@ -23,7 +23,6 @@ library(tmap)
 library(raster)
 ```
 
-
 ## Actividad 1. Clases, atributos y valores
 
 **A partir del fichero "data/gpkg/estaciones_inamhi.gpkg", cargue la capa "Estaciones meteorologicas"**
@@ -32,29 +31,28 @@ library(raster)
 inamhi_stat <- st_read("data/gpkg/estaciones_inamhi.gpkg", layer = "Estaciones meteorologicas")
 ```
 
-
 **Explore los datos cargados e intente responder las siguientes preguntas:**
 
-- ¿Cuál es el la extensión máxima que alcanza la capa?
+-   ¿Cuál es el la extensión máxima que alcanza la capa?
 
 ```{r}
 st_bbox(inamhi_stat)
 ```
 
-- ¿Cuál es el CRS de la capa?
+-   ¿Cuál es el CRS de la capa?
 
 ```{r}
 st_crs(inamhi_stat)
 ```
 
-- ¿Cómo se llama la estación que tiene el Código INAMHI M0033?
+-   ¿Cómo se llama la estación que tiene el Código INAMHI M0033?
 
 ```{r}
 inamhi_stat[inamhi_stat$Codigo == "M0033", c("Codigo", "Nombre")] |> 
   st_drop_geometry()
 ```
 
-- Visualice los datos en un mapa.
+-   Visualice los datos en un mapa.
 
 ```{r}
 #| message: false
@@ -63,8 +61,7 @@ tmap_mode("view")
 qtm(inamhi_stat, symbols.col = "Estado")
 ```
 
------
-
+------------------------------------------------------------------------
 
 ## Actividad 2. Filtrado de vectores
 
@@ -78,18 +75,16 @@ samp_points <- st_read("data/gpkg/muestreo.gpkg", layer = "Puntos de muestreo")
 dhs <- st_read("data/gpkg/muestreo.gpkg", layer = "Demarcacion hidrogafica Santiago")
 ```
 
-
 **Usando las herramientas hasta ahora aprendidas intente responder las siguientes preguntas:**
 
-- ¿Cuál es el promedio de temperatura del aire de los puntos de muestreo que están bajo la cota de 1000 m?
+-   ¿Cuál es el promedio de temperatura del aire de los puntos de muestreo que están bajo la cota de 1000 m?
 
 ```{r}
 subset(samp_points, Altitud < 1000) %>%
   .$ta_media |> mean()
 ```
 
-
-- Sin repetir el procedimiento para la pregunta anterior, encuentre el promedio y desviación estándar para los puntos de muestreo que sobrepasan el umbral de 50% de Porcentaje de bosque en el 2010.
+-   Sin repetir el procedimiento para la pregunta anterior, encuentre el promedio y desviación estándar para los puntos de muestreo que sobrepasan el umbral de 50% de Porcentaje de bosque en el 2010.
 
 ```{r}
 samp_points |>
@@ -100,7 +95,7 @@ samp_points |>
     )
 ```
 
-- ¿Cuántos puntos de muestreo existen en el área que cubre la Demarcación hidrológica Santiago? 
+-   ¿Cuántos puntos de muestreo existen en el área que cubre la Demarcación hidrológica Santiago?
 
 ```{r}
 samp_in_dhs <- samp_points[st_intersects(samp_points, dhs, sparse = F), ]
@@ -108,29 +103,28 @@ samp_in_dhs <- samp_points[st_intersects(samp_points, dhs, sparse = F), ]
 nrow(samp_in_dhs)
 ```
 
-- A partir de los puntos seleccionados, ¿Cuál es la extensión máxima de la selección?
+-   A partir de los puntos seleccionados, ¿Cuál es la extensión máxima de la selección?
 
 ```{r}
 st_bbox(samp_in_dhs)
 ```
 
------
-
+------------------------------------------------------------------------
 
 ## Actividad 3. Estilos y etiquetas de vectores
 
 **Usando datos de la capa "data/gpkg/muestreo.gpkg: Puntos de muestreo" y la Demarcación Hidrográfica del Río Santiago.**
 
-- Seleccione los puntos que pertenezcan a la Cuenca y que estén a más de 2800 msnm.
+-   Seleccione los puntos que pertenezcan a la Cuenca y que estén a más de 2800 msnm.
 
 ```{r}
 samp_points$in_dhs <- st_intersects(samp_points, dhs, sparse = F) & 
   samp_points$Altitud > 2800
 ```
 
-- Grafique los puntos esos con color azul y sobre el polígono de la Cuenca.
+-   Grafique los puntos esos con color azul y sobre el polígono de la Cuenca.
 
-- Los demás puntos grafiquelos con un color gris claro y con otra forma diferent
+-   Los demás puntos grafiquelos con un color gris claro y con otra forma diferent
 
 ```{r}
 qtm(dhs, fill = "grey30") +
@@ -140,19 +134,18 @@ qtm(dhs, fill = "grey30") +
   )
 ```
 
-
 # Trabajando con capas Ráster
 
-- Visualización de capas de raster
-  + Cargando datos en capas raster
-  + Explorando atributos y valores
-  + Consultas de valores e histograma
-  + Estilos y etiquetas de capas raster.
-  + Ejercicios prácticos
+-   Visualización de capas de raster
+    -   Cargando datos en capas raster
+    -   Explorando atributos y valores
+    -   Consultas de valores e histograma
+    -   Estilos y etiquetas de capas raster.
+    -   Ejercicios prácticos
 
+## Actividad 4. Exploración de capas raster
 
 **genere los resultados y respuestas de las siguientes preguntas:**
-
 
 Cargue las capas "temperatura_2.tif" y "dem200.tif". Las dos capas representan la temperatura media para un mes normal de Enero en Ecuador continental y la Altitud correspondiente. Ahora:
 
@@ -168,8 +161,7 @@ plot(at_ec)
 plot(dem)
 ```
 
-
-- Intente encontrar alguna diferencia entre las propiedades de ambos rasters:
+-   Intente encontrar alguna diferencia entre las propiedades de ambos rasters:
 
 **Propiedades del raster de temperatura**
 
@@ -183,7 +175,6 @@ crs(at_ec)
 extent(at_ec)
 ```
 
-
 **Propiedades del raster DEM**
 
 ```{r}
@@ -196,17 +187,14 @@ crs(dem)
 extent(dem)
 ```
 
-
 > Respuesta: Como se puede apreciar en los resultados, no existe diferencias en las propiedades del raster
 
-
-- Cargue las capas "modis_perc_bosque_*.tif"_ y descubra en qué se diferencia con la capa de temperatura.
+-   Cargue las capas "modis_perc_bosque\_\*.tif"\_ y descubra en qué se diferencia con la capa de temperatura.
 
 ```{r}
 modis_2000 <- raster("data/tif/modis_perc_bosque_2000.tif")
 modis_2010 <- raster("data/tif/modis_perc_bosque_2010.tif")
 ```
-
 
 ```{r}
 #| layout-ncol: 2
@@ -227,7 +215,6 @@ crs(modis_2000)
 extent(modis_2000)
 ```
 
-
 **Propiedades de la capa Modis 2010**
 
 ```{r}
@@ -240,8 +227,9 @@ crs(modis_2010)
 extent(modis_2010)
 ```
 
+> Respuesta: Las raster Modis\_\* tiene un CRS diferente al de temperatura. epsg: 3857 vs epsg: 32717.
 
-- Explore las capas de porcentaje de bosque ("modis_perc_bosque_*.tif") mediante histogramas. Visualmente, ¿Hacia qué lado del histograma se agrupan los valores?
+-   Explore las capas de porcentaje de bosque ("modis_perc_bosque\_\*.tif") mediante histogramas. Visualmente, ¿Hacia qué lado del histograma se agrupan los valores?
 
 ```{r}
 #| layout-ncol: 2
@@ -250,5 +238,103 @@ extent(modis_2010)
 hist(modis_2000)
 hist(modis_2010)
 ```
+
+> Respuesta: Se agrupan tanto en valores bajos como en valores altos, dejando una concavidad en los valores medios.
+
+
+## Actividad 5. Visualización de capas raster
+
+-   Genere un mapa de la capa de temperatura, con un estilo de gradiente de color, cuya escala se muestre azul (más bajos) a rojo (más alto)
+
+```{r}
+#| message: false
+tm_shape(at_ec) +
+  tm_raster(col = "Temperatura_2", palette = "-RdBu", midpoint = 15)
+```
+
+-   Usando los límites de 18 y 25 ºC, grafique la capa de temperatura como tres clases con distinto color único para cada rango.
+
+```{r}
+#| message: false
+reclassify(
+  at_ec, matrix(
+    c(-Inf, 18, 18,
+      18, 25, 20,
+      25, Inf, 25)
+  )
+) |>
+  tm_shape() +
+  tm_raster()
+```
+
+
+-   Carge las capas "clip_RT_LC08_L1TP....tif". Genere una sola figura con mapas estilo multi-banda: Composición 4-3-2, y Composición 7-6-4
+
+```{r}
+lc_f <- list.files("data/tif", pattern = "clip_RT", full.names = T)
+
+bname <- lc_f |> basename() |> str_extract("B[:digit:]")
+```
+
+
+```{r}
+comp432 <- raster::stack(
+  lc_f[3], lc_f[2], lc_f[1]
+)
+names(comp432) <- bname[c(3,2,1)]
+
+comp764 <- raster::stack(
+  lc_f[6], lc_f[5], lc_f[3]
+)
+names(comp764) <- bname[c(6,5,3)]
+```
+
+
+
+```{r}
+#| layout-ncol: 2
+
+plotRGB(comp432, stretch = "lin")
+plotRGB(comp764, stretch = "lin")
+```
+
+
+
+# Datos estructurados no espaciales
+
+-   Visualización información no espacial
+  -   Cargando datos estructurados
+  -   Convirtiendo datos estructurados a entidades espaciales
+  -   ¿Qué hacer con datos no estructurados?
+
+
+## Actividad 6. Cargando datos estructurados no espaciales
+
+**Usando las herramientas aprendidas, calcule el promedio de temperatura anual para cada codigo y despliegue el resultado como un mapa. Para esta actividad requerirá los datos de los ficheros CSV, siguientes:**
+
+```{r}
+#| message: false
+dt_month <- read_csv("data/csv/datos_mensuales.csv", na = "-9999")
+```
+
+ -    Promedio anual
+
+```{r}
+at_monh <- dt_month |> 
+  mutate(at_avg = rowMeans(cbind(Tax, Tan), na.rm = T)) |> 
+  group_by(codigo) |>
+  summarise(at = mean(at_avg, na.rm = T))
+```
+
+- Unión con estaciones
+
+```{r}
+#| message: false
+read_csv("data/csv/estaciones_meteorologicas.csv") |>
+  st_as_sf(coords = c("lon", "lat"), crs = 4326) |> 
+  inner_join(at_monh, by = "codigo") |> 
+  qtm(symbols.col = "at", title = "Temperatura media anual")
+```
+
 
 
